Daoのベース部分作成

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,7 @@ buildNumber.properties
 .mvn/timing.properties
 .mvn/wrapper/maven-wrapper.jar
 .flattened-pom.xml
+.metadata
+.mvn
+mvnw
+mvnw.cmd
